2001-01-03  jfaith <jfaith@cemsys.com>

	* resource.cc: (OrderValidate) fix off by one xmalloc bug.

2002-01-03  Alexander V. Lukyanov <lav@yars.free.net>

	* Filter.cc: don't stop process if there is a process group already;
	  don't call second->Done if !delete_second.
	* lftpget: quote single quote properly.
	* Fish.cc: use fish:connect-program setting.
	* resource.cc: new fish setting; don't send referer by default.

2002-01-01  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: fix SendCWD to set correct check case.

2001-12-26  Alexander V. Lukyanov <lav@yars.free.net>

	* ArgV.h: new ctor.
	* CatJob.cc, CatJob.h: use ArgV to launch filters; always launch
	  global command if there is for_each filter.
	* Filter.cc, Filter.h: DeleteSecondaryStream new method; improve
	  OutputFilter::{usesfd,Done,Kill}.

2001-12-26  Glenn Maynard <g_ld@zewt.org>

	* ftpclass.cc: correct message.

2001-12-25  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: assume keep-alive for http/1.1 by default (reported by
	  Marc Lehmann).

2001-12-24  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: reset real_cwd when someone does quote CWD and the like;
	  scan PWD reply for rightmost quote (suggested by Glenn Maynard);
	  separate method SendCWD.

2001-12-24  Glenn Maynard <g_ld@zewt.org>

	* StatusLine.h: make GetWidthDelayed const.

2001-12-24  Alexander V. Lukyanov <lav@yars.free.net>

	* LsCache.cc: ignore SetDirectory with NULL argument.

2001-12-21  Alexander V. Lukyanov <lav@yars.free.net>

	* mkdirJob.cc, mkdirJob.h: use orig_session approach instead of
	  url_session.
	* FindJob.cc, FindJob.h: Fg/Bg methods.

2001-12-20  Alexander V. Lukyanov <lav@yars.free.net>

	* ArgV.cc, ArgV.h: (seek) new method.
	* MirrorJob.cc: seek args before TreatJob creation.
	* ftpclass.cc, ftpclass.h, NetAccess.cc, NetAccess.h, Http.cc, Http.h,
	  Fish.cc, Fish.h: get rid of takeover_time; use last_priority and
	  idle_start (idea of Glenn Maynard).